Warning circle icon alignment fix

--- a/main.css
+++ b/main.css
@@ -757,7 +757,7 @@ svg.slider-32CRPX svg, .bd-switch-slider>svg {
 }
 .headerTop-1PNKck {
     top: 20px;
-    justify-content: flex-end;
+    margin-left: 15px;
 }
 .nameTag-2Nlmsy {
     margin: 24px 290px 24px 24px;
